Some fixes for configuration cache

--- a/gradle.properties
+++ b/gradle.properties
@@ -62,7 +62,7 @@ kotlin.mpp.androidSourceSetLayoutVersion1.nowarn=true
 org.gradle.daemon=true
 #org.gradle.caching=true
 #org.gradle.configureondemand=true
-#org.gradle.unsafe.configuration-cache=true
+org.gradle.unsafe.configuration-cache=true
 #org.gradle.unsafe.configuration-cache-problems=warn
 
 # https://kotlinlang.org/docs/whatsnew17.html#a-new-approach-to-incremental-compilation
