--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,7 @@
 pluginManagement {
+    plugins {
+        id("com.google.devtools.ksp") version "1.8.10-1.0.9"
+    }
     Eval.xy(this, it, file('./gradle/repositories.settings.gradle').text)
 }
 
@@ -11,6 +14,7 @@ boolean isPropertyTrue(String name) {
 boolean inCI = isPropertyTrue("CI")
 boolean disabledExtraKorgeLibs = isPropertyTrue("DISABLED_EXTRA_KORGE_LIBS")
 
+include(":processor:alias-generator")
 include(":kbignum")
 include(":klock")
 include(":klogger")
