Enable LinuxArm64 & kotlinx.coroutines 1.7.0-Beta

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,8 +4,8 @@ jcodec = "0.2.5"
 proguard-gradle = "7.2.2"
 kotlin = "1.8.10"
 #kotlin = "1.8.255-SNAPSHOT"
-#kotlinx-coroutines = "1.7.0-Beta"
-kotlinx-coroutines = "1.6.4"
+kotlinx-coroutines = "1.7.0-Beta"
+#kotlinx-coroutines = "1.6.4"
 kotlinx-serialization = "1.5.0"
 kotlinx-atomicfu = "0.20.0"
 kotlinx-benchmark = "0.4.7"
