--- a/settings.gradle
+++ b/settings.gradle
@@ -29,7 +29,7 @@ include(":ktruth")
 include(":korge-gradle-plugin")
 include(":korge-reload-agent")
 include(":korge-sandbox")
-if (System.getenv("ENABLE_OSX_METAL_PLAYGROUND") == "true") {
+if (enableMetalPlayground) {
     include(":osx-metal-playground")
 }
 
