Unifies KorgeJavaExec and KorgeProcessResources and fixes recursive JVM dependency on itself

--- a/korge-sandbox/build.gradle
+++ b/korge-sandbox/build.gradle
@@ -1,4 +1,4 @@
-import com.soywiz.korlibs.modules.KorgeJavaExec
+import com.soywiz.korge.gradle.targets.jvm.KorgeJavaExec
 
 description = "Multiplatform Game Engine written in Kotlin"
 
