Try org.gradle.parallel by default and configure it on CI (#1370)
* Try org.gradle.parallel by default and configure it on CI

* Try to be explicit with parallel in JVM and Kover

--- a/gradle.properties
+++ b/gradle.properties
@@ -68,3 +68,5 @@ org.gradle.daemon=true
 kotlin.incremental.useClasspathSnapshot=true
 
 #kotlin.build.report.output=file
+
+org.gradle.parallel=true
