--- a/.github/workflows/TEST.yml
+++ b/.github/workflows/TEST.yml
@@ -82,14 +82,16 @@ jobs:
       ENABLE_BENCHMARKS: true
     steps:
     - { uses: actions/checkout@v3 }
+    #- { name: Configure local.properties, run: "echo org.gradle.parallel=true >> local.properties && echo org.gradle.workers.max=2 >> local.properties" }
+    - { name: Configure local.properties, run: "echo org.gradle.parallel=true >> local.properties" }
     - { name: Install freeglut3 & openal, run: sudo apt-get update && sudo apt-get -y install freeglut3-dev libopenal-dev xvfb }
     - { name: Run Xvfb in Background, run: "Xvfb :99 &" }
     - { name: Set up JDK 1.8, uses: actions/setup-java@v1, with: { java-version: 1.8 } }
     - { name: Gradle cache, uses: ./.github/actions/gradle-cache }
     - { name: Grant execute permission for gradlew, run: chmod +x gradlew }
     - { name: Start gradle, run: ./gradlew }
-    - { name: Building classes, run: ./gradlew compileTestKotlinJvm }
-    - { name: Testing JVM, run: "./gradlew jvmTest", env: { EGL_LOG_LEVEL: debug, LIBGL_DEBUG: verbose, LIBGL_ALWAYS_SOFTWARE: true, MESA_DEBUG: true } }
+    - { name: Building classes, run: ./gradlew --parallel compileTestKotlinJvm }
+    - { name: Testing JVM, run: "./gradlew --parallel jvmTest", env: { EGL_LOG_LEVEL: debug, LIBGL_DEBUG: verbose, LIBGL_ALWAYS_SOFTWARE: true, MESA_DEBUG: true } }
     - { name: Archive Test Results, if: failure(), uses: actions/upload-artifact@v3, with: { name: screenshot-test-results-linux, retention-days: 21, path: "**/build/reports", if-no-files-found: ignore } }
     - { name: Check sandbox compiles, run: "./gradlew :korge-sandbox:jvmJar" }
     - { name: Publish to maven local, run: ./gradlew publishJvmLocal }
@@ -119,7 +121,7 @@ jobs:
       #    name: coverage-results
       #    path: build/reports/kover/merged/html/
       #- { name: Kover Merged XML Reports, uses: GabrielBB/xvfb-action@v1, with: { run: ./gradlew koverMergedXmlReport } }
-      - { name: Kover Merged XML Reports, run: ./gradlew koverMergedXmlReport }
+      - { name: Kover Merged XML Reports, run: ./gradlew --parallel koverMergedXmlReport }
       - uses: codecov/codecov-action@v3
         with:
           files: ./build/reports/kover/merged/xml/report.xml
@@ -239,6 +241,7 @@ jobs:
       GRADLE_OPTS: -Dorg.gradle.daemon=false -Dkotlin.compiler.execution.strategy=in-process -Dorg.gradle.workers.max=3
     steps:
     - { uses: actions/checkout@v3 }
+    - { name: Configure local.properties, run: "echo org.gradle.parallel=false >> local.properties" }
     - { name: Download, shell: cmd, run: "curl -L -o opengl32-x64.zip https://github.com/korlibs/mesa-dist-win/releases/download/21.2.3/opengl32-x64.zip" }
     - { name: unzip, shell: cmd, run: "unzip opengl32-x64.zip" }
     - { name: unzip to korge, shell: cmd, run: "unzip opengl32-x64.zip -d korge" }
