--- a/.github/workflows/FAKE_TESTDEPLOY.yml
+++ b/.github/workflows/FAKE_TESTDEPLOY.yml
@@ -11,13 +11,14 @@ env:
   ORG_GRADLE_PROJECT_signingPassword: ${{ secrets.ORG_GRADLE_PROJECT_SIGNINGPASSWORD }}
   SONATYPE_USERNAME: ${{ secrets.SONATYPEUSERNAME }}
   SONATYPE_PASSWORD: ${{ secrets.SONATYPEPASSWORD }}
+  JAVA_VERSION: 11
 
 jobs:
   publish-windows:
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v1
-      - { name: Set up JDK 11, uses: actions/setup-java@v1, with: { java-version: 11 } }
+      - { name: Set up JDK 11, uses: actions/setup-java@v1, with: { java-version: ${{ env.JAVA_VERSION }} } }
       - run: CALL gradlew.bat --no-daemon -DCI=true
         shell: cmd
       - run: CALL gradlew.bat --no-daemon jvmTest publishMingwX64PublicationToMavenLocal -DCI=true
@@ -28,7 +29,7 @@ jobs:
     runs-on: macos-11
     steps:
       - uses: actions/checkout@v1
-      - { name: Set up JDK 11, uses: actions/setup-java@v1, with: { java-version: 11 } }
+      - { name: Set up JDK 11, uses: actions/setup-java@v1, with: { java-version: ${{ env.JAVA_VERSION }} } }
       - run: ./gradlew -DCI=true
       - run: ./gradlew jvmTest publishMacosX64PublicationToMavenLocal publishMacosArm64PublicationToMavenLocal -DCI=true
         env:
@@ -37,7 +38,7 @@ jobs:
     runs-on: macos-11
     steps:
       - uses: actions/checkout@v1
-      - { name: Set up JDK 11, uses: actions/setup-java@v1, with: { java-version: 11 } }
+      - { name: Set up JDK 11, uses: actions/setup-java@v1, with: { java-version: ${{ env.JAVA_VERSION }} } }
       - run: ./gradlew -DCI=true
       - run: ./gradlew publishIosArm64PublicationToMavenLocal publishIosX64PublicationToMavenLocal publishIosSimulatorArm64PublicationToMavenLocal -DCI=true
         env:
@@ -46,7 +47,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-      - { name: Set up JDK 11, uses: actions/setup-java@v1, with: { java-version: 11 } }
+      - { name: Set up JDK 11, uses: actions/setup-java@v1, with: { java-version: ${{ env.JAVA_VERSION }} } }
       - run: sudo apt-get install xvfb
       - run: xvfb-run --auto-servernum ./gradlew --no-daemon -DCI=true
       - run: xvfb-run --auto-servernum ./gradlew --no-daemon publishKotlinMultiplatformPublicationToMavenLocal publishJvmPublicationToMavenLocal -DCI=true
@@ -54,7 +55,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-      - { name: Set up JDK 11, uses: actions/setup-java@v1, with: { java-version: 11 } }
+      - { name: Set up JDK 11, uses: actions/setup-java@v1, with: { java-version: ${{ env.JAVA_VERSION }} } }
       - run: sudo apt-get install xvfb
       - run: xvfb-run --auto-servernum ./gradlew --no-daemon -DCI=true
       - run: xvfb-run --auto-servernum ./gradlew --no-daemon publishJsPublicationToMavenLocal publishAndroidPublicationToMavenLocal -DCI=true
@@ -62,7 +63,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-      - { name: Set up JDK 11, uses: actions/setup-java@v1, with: { java-version: 11 } }
+      - { name: Set up JDK 11, uses: actions/setup-java@v1, with: { java-version: ${{ env.JAVA_VERSION }} } }
       - run: sudo apt-get install xvfb
       - run: xvfb-run --auto-servernum ./gradlew --no-daemon -DCI=true
       - run: xvfb-run --auto-servernum ./gradlew --no-daemon jvmTest publishLinuxX64PublicationToMavenLocal -DCI=true
