--- a/.github/workflows/DEPLOY.yml
+++ b/.github/workflows/DEPLOY.yml
@@ -21,7 +21,7 @@ jobs:
       stagedRepositoryId: ${{ steps.createStagedRepositoryId.outputs.stagedRepositoryId }}
     steps:
       - uses: actions/checkout@v1
-      - { name: Set up JDK 11, uses: actions/setup-java@v1, with: { java-version: ${{ env.JAVA_VERSION }} } }
+      - { name: Set up JDK 11, uses: actions/setup-java@v1, with: { java-version: "${{ env.JAVA_VERSION }}" } }
       - run: sudo apt-get install xvfb
       - id: createStagedRepositoryId
         run: xvfb-run --auto-servernum ./gradlew --no-daemon startReleasingMavenCentral
@@ -33,7 +33,7 @@ jobs:
       stagedRepositoryId: ${{needs.create-staging-repo.outputs.stagedRepositoryId}}
     steps:
       - uses: actions/checkout@v1
-      - { name: Set up JDK 11, uses: actions/setup-java@v1, with: { java-version: ${{ env.JAVA_VERSION }} } }
+      - { name: Set up JDK 11, uses: actions/setup-java@v1, with: { java-version: "${{ env.JAVA_VERSION }}" } }
       - run: CALL gradlew.bat --no-daemon checkReleasingMavenCentral publishMingwX64PublicationToMavenRepository
         shell: cmd
         env:
@@ -46,7 +46,7 @@ jobs:
       stagedRepositoryId: ${{needs.create-staging-repo.outputs.stagedRepositoryId}}
     steps:
       - uses: actions/checkout@v1
-      - { name: Set up JDK 11, uses: actions/setup-java@v1, with: { java-version: ${{ env.JAVA_VERSION }} } }
+      - { name: Set up JDK 11, uses: actions/setup-java@v1, with: { java-version: "${{ env.JAVA_VERSION }}" } }
       - run: ./gradlew checkReleasingMavenCentral
       - run: ./gradlew publishMacosX64PublicationToMavenRepository publishMacosArm64PublicationToMavenRepository
         env:
@@ -58,7 +58,7 @@ jobs:
       stagedRepositoryId: ${{needs.create-staging-repo.outputs.stagedRepositoryId}}
     steps:
       - uses: actions/checkout@v1
-      - { name: Set up JDK 11, uses: actions/setup-java@v1, with: { java-version: ${{ env.JAVA_VERSION }} } }
+      - { name: Set up JDK 11, uses: actions/setup-java@v1, with: { java-version: "${{ env.JAVA_VERSION }}" } }
       - run: ./gradlew checkReleasingMavenCentral
       - run: ./gradlew publishIosArm64PublicationToMavenRepository publishIosX64PublicationToMavenRepository publishIosSimulatorArm64PublicationToMavenRepository
         env:
@@ -70,7 +70,7 @@ jobs:
       stagedRepositoryId: ${{needs.create-staging-repo.outputs.stagedRepositoryId}}
     steps:
       - uses: actions/checkout@v1
-      - { name: Set up JDK 11, uses: actions/setup-java@v1, with: { java-version: ${{ env.JAVA_VERSION }} } }
+      - { name: Set up JDK 11, uses: actions/setup-java@v1, with: { java-version: "${{ env.JAVA_VERSION }}" } }
       - run: ./gradlew checkReleasingMavenCentral
       - run: ./gradlew publishTvosX64PublicationToMavenRepository publishTvosArm64PublicationToMavenRepository publishTvosSimulatorArm64PublicationToMavenRepository
         env:
@@ -82,7 +82,7 @@ jobs:
       stagedRepositoryId: ${{needs.create-staging-repo.outputs.stagedRepositoryId}}
     steps:
       - uses: actions/checkout@v1
-      - { name: Set up JDK 11, uses: actions/setup-java@v1, with: { java-version: ${{ env.JAVA_VERSION }} } }
+      - { name: Set up JDK 11, uses: actions/setup-java@v1, with: { java-version: "${{ env.JAVA_VERSION }}" } }
       - run: ./gradlew checkReleasingMavenCentral
       - run: ./gradlew publishWatchosX64PublicationToMavenRepository publishWatchosArm64PublicationToMavenRepository publishWatchosSimulatorArm64PublicationToMavenRepository
         env:
@@ -94,7 +94,7 @@ jobs:
       stagedRepositoryId: ${{needs.create-staging-repo.outputs.stagedRepositoryId}}
     steps:
       - uses: actions/checkout@v1
-      - { name: Set up JDK 11, uses: actions/setup-java@v1, with: { java-version: ${{ env.JAVA_VERSION }} } }
+      - { name: Set up JDK 11, uses: actions/setup-java@v1, with: { java-version: "${{ env.JAVA_VERSION }}" } }
       - run: sudo apt-get install xvfb
       - run: xvfb-run --auto-servernum ./gradlew --no-daemon checkReleasingMavenCentral
       - run: xvfb-run --auto-servernum ./gradlew --no-daemon publishKotlinMultiplatformPublicationToMavenRepository publishJvmPublicationToMavenRepository
@@ -105,7 +105,7 @@ jobs:
       stagedRepositoryId: ${{needs.create-staging-repo.outputs.stagedRepositoryId}}
     steps:
       - uses: actions/checkout@v1
-      - { name: Set up JDK 11, uses: actions/setup-java@v1, with: { java-version: ${{ env.JAVA_VERSION }} } }
+      - { name: Set up JDK 11, uses: actions/setup-java@v1, with: { java-version: "${{ env.JAVA_VERSION }}" } }
       - run: sudo apt-get install xvfb
       - run: xvfb-run --auto-servernum ./gradlew --no-daemon checkReleasingMavenCentral
       - run: xvfb-run --auto-servernum ./gradlew --no-daemon publishJsPublicationToMavenRepository publishAndroidPublicationToMavenRepository
@@ -116,7 +116,7 @@ jobs:
       stagedRepositoryId: ${{needs.create-staging-repo.outputs.stagedRepositoryId}}
     steps:
       - uses: actions/checkout@v1
-      - { name: Set up JDK 11, uses: actions/setup-java@v1, with: { java-version: ${{ env.JAVA_VERSION }} } }
+      - { name: Set up JDK 11, uses: actions/setup-java@v1, with: { java-version: "${{ env.JAVA_VERSION }}" } }
       - run: sudo apt-get install xvfb
       - run: xvfb-run --auto-servernum ./gradlew --no-daemon checkReleasingMavenCentral
       - run: xvfb-run --auto-servernum ./gradlew --no-daemon publishLinuxX64PublicationToMavenRepository publishLinuxArm64PublicationToMavenRepository
@@ -128,5 +128,5 @@ jobs:
       stagedRepositoryId: ${{needs.create-staging-repo.outputs.stagedRepositoryId}}
     steps:
       - uses: actions/checkout@v1
-      - { name: Set up JDK 11, uses: actions/setup-java@v1, with: { java-version: ${{ env.JAVA_VERSION }} } }
+      - { name: Set up JDK 11, uses: actions/setup-java@v1, with: { java-version: "${{ env.JAVA_VERSION }}" } }
       - run: ./gradlew releaseMavenCentral
