--- a/gradle.properties
+++ b/gradle.properties
@@ -67,6 +67,8 @@ org.gradle.daemon=true
 # https://kotlinlang.org/docs/whatsnew17.html#a-new-approach-to-incremental-compilation
 kotlin.incremental.useClasspathSnapshot=true
 
+android.disableAutomaticComponentCreation=true
+
 #kotlin.build.report.output=file
 
 org.gradle.parallel=true
