--- a/.github/workflows/TEST_SNAPSHOT.yml
+++ b/.github/workflows/TEST_SNAPSHOT.yml
@@ -14,6 +14,7 @@ env:
   # https://oss.sonatype.org/content/repositories/snapshots/org/jetbrains/kotlin/kotlin-compiler/1.5.255-SNAPSHOT/
   FORCED_KOTLIN_VERSION: "1.7.255-SNAPSHOT"
   SKIP_KORGE_SAMPLES: true
+  JAVA_VERSION: 11
 
 jobs:
   build:
@@ -23,10 +24,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
-      with:
-        java-version: 1.8
+    - { name: Set up JDK, uses: actions/setup-java@v1, with: { java-version: "${{ env.JAVA_VERSION }}" } }
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Start gradle
