--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,6 +2,7 @@
 jna = "5.13.0"
 jcodec = "0.2.5"
 proguard-gradle = "7.2.2"
+#kotlin = "1.8.20-Beta"
 kotlin = "1.8.10"
 #kotlin = "1.8.255-SNAPSHOT"
 kotlinx-coroutines = "1.7.0-Beta"
@@ -13,11 +14,13 @@ dokka = "1.7.20"
 kover = "0.6.1"
 kover-agent = "1.0.692"
 node = "16.9.1"
-android-build-gradle-java8 = "4.2.0"
-android-build-gradle-java11 = "7.0.4"
+#android-build-gradle = "7.4.1"
+#android-build-gradle = "7.4.0-beta02"
+android-build-gradle = "7.3.1"
+#android-build-gradle = "8.1.0-alpha04"
 gson = "2.8.6"
-#gradle-publish-plugin = "1.0.0"
-gradle-publish-plugin = "0.14.0"
+gradle-publish-plugin = "1.1.0"
+#gradle-publish-plugin = "0.14.0"
 closure-compiler = "v20210808"
 # https://repo.maven.apache.org/maven2/org/jetbrains/intellij/deps/intellij-coverage-agent/
 
@@ -34,8 +37,7 @@ jcodec-core = { module = "org.jcodec:jcodec", version.ref = "jcodec" }
 proguard-gradle = { module = "com.guardsquare:proguard-gradle", version.ref = "proguard-gradle" }
 kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinx-coroutines" }
 kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlinx-coroutines" }
-android-build-gradle-java8 = { module = "com.android.tools.build:gradle", version.ref = "android-build-gradle-java8" }
-android-build-gradle-java11 = { module = "com.android.tools.build:gradle", version.ref = "android-build-gradle-java11" }
+android-build-gradle = { module = "com.android.tools.build:gradle", version.ref = "android-build-gradle" }
 gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
 gradle-publish-plugin = { module = "com.gradle.publish:plugin-publish-plugin", version.ref = "gradle-publish-plugin" }
 closure-compiler = { module = "com.google.javascript:closure-compiler", version.ref = "closure-compiler" }
