--- a/build.gradle
+++ b/build.gradle
@@ -1,1 +1,6 @@
+plugins {
+    //id "com.dorongold.task-tree" version "2.1.1"
+    // ./gradlew :kds:compileKotlinJs taskTree
+}
+
 com.soywiz.korlibs.root.RootKorlibsPlugin.doInit(rootProject)
