--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,8 +2,8 @@
 jna = "5.13.0"
 jcodec = "0.2.5"
 proguard-gradle = "7.2.2"
-#kotlin = "1.8.20-RC"
-kotlin = "1.8.10"
+kotlin = "1.8.20-RC"
+#kotlin = "1.8.10"
 #kotlin = "1.8.255-SNAPSHOT"
 kotlinx-coroutines = "1.7.0-Beta"
 #kotlinx-coroutines = "1.6.4"
@@ -14,7 +14,7 @@ dokka = "1.8.10"
 kover = "0.6.1"
 kover-agent = "1.0.712"
 node = "16.9.1"
-#android-build-gradle = "7.4.1"
+#android-build-gradle = "7.4.2"
 #android-build-gradle = "7.4.0-beta02"
 android-build-gradle = "7.3.1"
 #android-build-gradle = "8.1.0-alpha04"
