--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,8 +10,8 @@ updates:
     schedule:
       interval: "weekly"
     ignore:
-      - file-path: "**/build.gradle"
-      - file-path: "**/settings.gradle"
+      - dependency-name: "**/build.gradle"
+      - dependency-name: "**/settings.gradle"
   - package-ecosystem: "npm"
     directory: "/"
     schedule:
