--- a/.github/workflows/DEPLOY.yml
+++ b/.github/workflows/DEPLOY.yml
@@ -13,6 +13,7 @@ env:
   SONATYPE_USERNAME: ${{ secrets.SONATYPEUSERNAME }}
   SONATYPE_PASSWORD: ${{ secrets.SONATYPEPASSWORD }}
   JAVA_VERSION: 11
+  JAVA_DISTRIBUTION: zulu
 
 jobs:
   create-staging-repo:
@@ -21,7 +22,7 @@ jobs:
       stagedRepositoryId: ${{ steps.createStagedRepositoryId.outputs.stagedRepositoryId }}
     steps:
       - uses: actions/checkout@v1
-      - { name: Set up JDK, uses: actions/setup-java@v1, with: { java-version: "${{ env.JAVA_VERSION }}" } }
+      - { name: Set up JDK, uses: actions/setup-java@v3, with: { distribution: "${{ env.JAVA_DISTRIBUTION }}", java-version: "${{ env.JAVA_VERSION }}" } }
       - run: sudo apt-get install xvfb
       - id: createStagedRepositoryId
         run: xvfb-run --auto-servernum ./gradlew --no-daemon startReleasingMavenCentral
@@ -33,7 +34,7 @@ jobs:
       stagedRepositoryId: ${{needs.create-staging-repo.outputs.stagedRepositoryId}}
     steps:
       - uses: actions/checkout@v1
-      - { name: Set up JDK, uses: actions/setup-java@v1, with: { java-version: "${{ env.JAVA_VERSION }}" } }
+      - { name: Set up JDK, uses: actions/setup-java@v3, with: { distribution: "${{ env.JAVA_DISTRIBUTION }}", java-version: "${{ env.JAVA_VERSION }}" } }
       - run: CALL gradlew.bat --no-daemon checkReleasingMavenCentral publishMingwX64PublicationToMavenRepository
         shell: cmd
         env:
@@ -46,7 +47,7 @@ jobs:
       stagedRepositoryId: ${{needs.create-staging-repo.outputs.stagedRepositoryId}}
     steps:
       - uses: actions/checkout@v1
-      - { name: Set up JDK, uses: actions/setup-java@v1, with: { java-version: "${{ env.JAVA_VERSION }}" } }
+      - { name: Set up JDK, uses: actions/setup-java@v3, with: { distribution: "${{ env.JAVA_DISTRIBUTION }}", java-version: "${{ env.JAVA_VERSION }}" } }
       - run: ./gradlew checkReleasingMavenCentral
       - run: ./gradlew publishMacosX64PublicationToMavenRepository publishMacosArm64PublicationToMavenRepository
         env:
@@ -58,7 +59,7 @@ jobs:
       stagedRepositoryId: ${{needs.create-staging-repo.outputs.stagedRepositoryId}}
     steps:
       - uses: actions/checkout@v1
-      - { name: Set up JDK, uses: actions/setup-java@v1, with: { java-version: "${{ env.JAVA_VERSION }}" } }
+      - { name: Set up JDK, uses: actions/setup-java@v3, with: { distribution: "${{ env.JAVA_DISTRIBUTION }}", java-version: "${{ env.JAVA_VERSION }}" } }
       - run: ./gradlew checkReleasingMavenCentral
       - run: ./gradlew publishIosArm64PublicationToMavenRepository publishIosX64PublicationToMavenRepository publishIosSimulatorArm64PublicationToMavenRepository
         env:
@@ -70,7 +71,7 @@ jobs:
       stagedRepositoryId: ${{needs.create-staging-repo.outputs.stagedRepositoryId}}
     steps:
       - uses: actions/checkout@v1
-      - { name: Set up JDK, uses: actions/setup-java@v1, with: { java-version: "${{ env.JAVA_VERSION }}" } }
+      - { name: Set up JDK, uses: actions/setup-java@v3, with: { distribution: "${{ env.JAVA_DISTRIBUTION }}", java-version: "${{ env.JAVA_VERSION }}" } }
       - run: ./gradlew checkReleasingMavenCentral
       - run: ./gradlew publishTvosX64PublicationToMavenRepository publishTvosArm64PublicationToMavenRepository publishTvosSimulatorArm64PublicationToMavenRepository
         env:
@@ -82,7 +83,7 @@ jobs:
       stagedRepositoryId: ${{needs.create-staging-repo.outputs.stagedRepositoryId}}
     steps:
       - uses: actions/checkout@v1
-      - { name: Set up JDK, uses: actions/setup-java@v1, with: { java-version: "${{ env.JAVA_VERSION }}" } }
+      - { name: Set up JDK, uses: actions/setup-java@v3, with: { distribution: "${{ env.JAVA_DISTRIBUTION }}", java-version: "${{ env.JAVA_VERSION }}" } }
       - run: ./gradlew checkReleasingMavenCentral
       - run: ./gradlew publishWatchosX64PublicationToMavenRepository publishWatchosArm64PublicationToMavenRepository publishWatchosSimulatorArm64PublicationToMavenRepository
         env:
@@ -94,7 +95,7 @@ jobs:
       stagedRepositoryId: ${{needs.create-staging-repo.outputs.stagedRepositoryId}}
     steps:
       - uses: actions/checkout@v1
-      - { name: Set up JDK, uses: actions/setup-java@v1, with: { java-version: "${{ env.JAVA_VERSION }}" } }
+      - { name: Set up JDK, uses: actions/setup-java@v3, with: { distribution: "${{ env.JAVA_DISTRIBUTION }}", java-version: "${{ env.JAVA_VERSION }}" } }
       - run: sudo apt-get install xvfb
       - run: xvfb-run --auto-servernum ./gradlew --no-daemon checkReleasingMavenCentral
       - run: xvfb-run --auto-servernum ./gradlew --no-daemon publishKotlinMultiplatformPublicationToMavenRepository publishJvmPublicationToMavenRepository
@@ -105,7 +106,7 @@ jobs:
       stagedRepositoryId: ${{needs.create-staging-repo.outputs.stagedRepositoryId}}
     steps:
       - uses: actions/checkout@v1
-      - { name: Set up JDK, uses: actions/setup-java@v1, with: { java-version: "${{ env.JAVA_VERSION }}" } }
+      - { name: Set up JDK, uses: actions/setup-java@v3, with: { distribution: "${{ env.JAVA_DISTRIBUTION }}", java-version: "${{ env.JAVA_VERSION }}" } }
       - run: sudo apt-get install xvfb
       - run: xvfb-run --auto-servernum ./gradlew --no-daemon checkReleasingMavenCentral
       - run: xvfb-run --auto-servernum ./gradlew --no-daemon publishJsPublicationToMavenRepository publishAndroidPublicationToMavenRepository
@@ -116,7 +117,7 @@ jobs:
       stagedRepositoryId: ${{needs.create-staging-repo.outputs.stagedRepositoryId}}
     steps:
       - uses: actions/checkout@v1
-      - { name: Set up JDK, uses: actions/setup-java@v1, with: { java-version: "${{ env.JAVA_VERSION }}" } }
+      - { name: Set up JDK, uses: actions/setup-java@v3, with: { distribution: "${{ env.JAVA_DISTRIBUTION }}", java-version: "${{ env.JAVA_VERSION }}" } }
       - run: sudo apt-get install xvfb
       - run: xvfb-run --auto-servernum ./gradlew --no-daemon checkReleasingMavenCentral
       - run: xvfb-run --auto-servernum ./gradlew --no-daemon publishLinuxX64PublicationToMavenRepository publishLinuxArm64PublicationToMavenRepository
@@ -128,5 +129,5 @@ jobs:
       stagedRepositoryId: ${{needs.create-staging-repo.outputs.stagedRepositoryId}}
     steps:
       - uses: actions/checkout@v1
-      - { name: Set up JDK, uses: actions/setup-java@v1, with: { java-version: "${{ env.JAVA_VERSION }}" } }
+      - { name: Set up JDK, uses: actions/setup-java@v3, with: { distribution: "${{ env.JAVA_DISTRIBUTION }}", java-version: "${{ env.JAVA_VERSION }}" } }
       - run: ./gradlew releaseMavenCentral
