--- a/.github/workflows/TEST.yml
+++ b/.github/workflows/TEST.yml
@@ -15,6 +15,7 @@ env:
   SKIP_KORGE_SAMPLES: true
   DISPLAY: ":99"
   JAVA_VERSION: 11
+  JAVA_DISTRIBUTION: zulu
 
 jobs:
   changes:
@@ -87,7 +88,7 @@ jobs:
     - { name: Configure local.properties, run: "echo org.gradle.parallel=true >> local.properties" }
     - { name: Install freeglut3 & openal, run: sudo apt-get update && sudo apt-get -y install freeglut3-dev libopenal-dev xvfb }
     - { name: Run Xvfb in Background, run: "Xvfb :99 &" }
-    - { name: Set up JDK, uses: actions/setup-java@v1, with: { java-version: "${{ env.JAVA_VERSION }}" } }
+    - { name: Set up JDK, uses: actions/setup-java@v3, with: { distribution: "${{ env.JAVA_DISTRIBUTION }}", java-version: "${{ env.JAVA_VERSION }}" } }
     - { name: Gradle cache, uses: ./.github/actions/gradle-cache }
     - { name: Grant execute permission for gradlew, run: chmod +x gradlew }
     - { name: Start gradle, run: ./gradlew --stacktrace }
@@ -112,7 +113,7 @@ jobs:
       - { uses: actions/checkout@v3 }
       - { name: Install freeglut3 & openal, run: sudo apt-get update && sudo apt-get -y install freeglut3-dev libopenal-dev xvfb }
       - { name: Run Xvfb in Background, run: "Xvfb :99 &" }
-      - { name: Set up JDK, uses: actions/setup-java@v1, with: { java-version: "${{ env.JAVA_VERSION }}" } }
+      - { name: Set up JDK, uses: actions/setup-java@v3, with: { distribution: "${{ env.JAVA_DISTRIBUTION }}", java-version: "${{ env.JAVA_VERSION }}" } }
       - { name: Gradle cache, uses: ./.github/actions/gradle-cache }
       - { name: Grant execute permission for gradlew, run: chmod +x gradlew }
       - { name: Start gradle, run: ./gradlew }
@@ -139,7 +140,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - { uses: actions/checkout@v3 }
-      - { name: Set up JDK, uses: actions/setup-java@v1, with: { java-version: "${{ env.JAVA_VERSION }}" } }
+      - { name: Set up JDK, uses: actions/setup-java@v3, with: { distribution: "${{ env.JAVA_DISTRIBUTION }}", java-version: "${{ env.JAVA_VERSION }}" } }
       - { name: Install freeglut3 & openal, run: sudo apt-get update && sudo apt-get -y install freeglut3-dev libopenal-dev }
       - { name: Gradle cache, uses: ./.github/actions/gradle-cache }
       - { name: Grant execute permission for gradlew, run: chmod +x gradlew }
@@ -156,7 +157,7 @@ jobs:
     #runs-on: ubuntu-latest
     steps:
       - { uses: actions/checkout@v3 }
-      - { name: Set up JDK, uses: actions/setup-java@v1, with: { java-version: "${{ env.JAVA_VERSION }}" } }
+      - { name: Set up JDK, uses: actions/setup-java@v3, with: { distribution: "${{ env.JAVA_DISTRIBUTION }}", java-version: "${{ env.JAVA_VERSION }}" } }
       #- { name: Install freeglut3 & openal, run: sudo apt-get update && sudo apt-get -y install freeglut3-dev libopenal-dev }
       #- { name: Gradle cache, uses: ./.github/actions/gradle-cache }
       - { name: Grant execute permission for gradlew, run: chmod +x gradlew }
@@ -176,7 +177,7 @@ jobs:
     runs-on: macos-11
     steps:
     - { uses: actions/checkout@v3 }
-    - { name: Set up JDK, uses: actions/setup-java@v1, with: { java-version: "${{ env.JAVA_VERSION }}" } }
+    - { name: Set up JDK, uses: actions/setup-java@v3, with: { distribution: "${{ env.JAVA_DISTRIBUTION }}", java-version: "${{ env.JAVA_VERSION }}" } }
     - { name: Gradle cache, uses: ./.github/actions/gradle-cache }
     - { name: Grant execute permission for gradlew, run: chmod +x gradlew }
     - { name: Start gradle, run: ./gradlew }
@@ -197,7 +198,7 @@ jobs:
     - { uses: actions/checkout@v3 }
     - { name: Install freeglut3 & openal, run: sudo apt-get update && sudo apt-get -y install freeglut3-dev libopenal-dev xvfb }
     - { name: Run Xvfb in Background, run: "Xvfb :99 &" }
-    - { name: Set up JDK, uses: actions/setup-java@v1, with: { java-version: "${{ env.JAVA_VERSION }}" } }
+    - { name: Set up JDK, uses: actions/setup-java@v3, with: { distribution: "${{ env.JAVA_DISTRIBUTION }}", java-version: "${{ env.JAVA_VERSION }}" } }
     - { name: Gradle cache, uses: ./.github/actions/gradle-cache }
     - { name: Grant execute permission for gradlew, run: chmod +x gradlew }
     - { name: Start gradle, run: ./gradlew }
@@ -219,7 +220,7 @@ jobs:
     #  DISABLE_HEADLESS_TEST: true
     steps:
     - { uses: actions/checkout@v3 }
-    - { name: Set up JDK, uses: actions/setup-java@v1, with: { java-version: "${{ env.JAVA_VERSION }}" } }
+    - { name: Set up JDK, uses: actions/setup-java@v3, with: { distribution: "${{ env.JAVA_DISTRIBUTION }}", java-version: "${{ env.JAVA_VERSION }}" } }
     - { name: Gradle cache, uses: ./.github/actions/gradle-cache }
     - { name: Grant execute permission for gradlew, run: chmod +x gradlew }
     - { name: Start gradle, run: ./gradlew }
@@ -246,7 +247,7 @@ jobs:
     - { name: Download, shell: cmd, run: "curl -L -o opengl32-x64.zip https://github.com/korlibs/mesa-dist-win/releases/download/21.2.3/opengl32-x64.zip" }
     - { name: unzip, shell: cmd, run: "unzip opengl32-x64.zip" }
     - { name: unzip to korge, shell: cmd, run: "unzip opengl32-x64.zip -d korge" }
-    - { name: Set up JDK, uses: actions/setup-java@v1, with: { java-version: "${{ env.JAVA_VERSION }}" } }
+    - { name: Set up JDK, uses: actions/setup-java@v3, with: { distribution: "${{ env.JAVA_DISTRIBUTION }}", java-version: "${{ env.JAVA_VERSION }}" } }
     - { name: Gradle cache, uses: ./.github/actions/gradle-cache }
     - { name: Testing JVM on windows, shell: cmd, run: "CALL gradlew.bat jvmTest", env: { EGL_LOG_LEVEL: debug, LIBGL_DEBUG: verbose, LIBGL_ALWAYS_SOFTWARE: true, MESA_DEBUG: true } }
     - { name: Archive Test Results, if: failure(), uses: actions/upload-artifact@v3, with: { name: screenshot-test-results-windows, retention-days: 21, path: "**/build/reports", if-no-files-found: ignore } }
