Disable MFVC & unify configuration

--- a/gradle.properties
+++ b/gradle.properties
@@ -72,3 +72,6 @@ android.disableAutomaticComponentCreation=true
 #kotlin.build.report.output=file
 
 org.gradle.parallel=true
+
+#enableMFVC=true
+enableMFVC=false
