--- a/e2e-test/gradle.properties
+++ b/e2e-test/gradle.properties
@@ -6,3 +6,5 @@ kotlin.mpp.stability.nowarn=true
 kotlin.js.webpack.major.version=4
 #kotlin.test.infer.jvm.variant=false
 #org.gradle.logging.level=quiet
+
+kotlin.mpp.androidSourceSetLayoutVersion=2
