Try to use MFVC again

--- a/gradle.properties
+++ b/gradle.properties
@@ -73,5 +73,5 @@ android.disableAutomaticComponentCreation=true
 
 org.gradle.parallel=true
 
-#enableMFVC=true
-enableMFVC=false
+enableMFVC=true
+#enableMFVC=false
