--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,10 +4,10 @@ jcodec = "0.2.5"
 proguard-gradle = "7.2.2"
 kotlin = "1.8.20"
 #kotlin = "1.8.255-SNAPSHOT"
-kotlinx-coroutines = "1.7.0-Beta"
+kotlinx-coroutines = "1.7.0-Beta-wasm0"
 #kotlinx-coroutines = "1.6.4"
 kotlinx-serialization = "1.5.0"
-kotlinx-atomicfu = "0.20.2"
+kotlinx-atomicfu = "0.18.5-wasm1"
 kotlinx-benchmark = "0.4.7"
 dokka = "1.8.10"
 kover = "0.6.1"
