WIP New BinPacker

--- a/korge-gradle-plugin/build.gradle
+++ b/korge-gradle-plugin/build.gradle
@@ -84,6 +84,7 @@ dependencies {
 	implementation(localGroovy())
     //compileOnly(gradleKotlinDsl())
 
+    testImplementation("org.jetbrains.kotlin:kotlin-test")
     testImplementation("org.jetbrains.kotlin:kotlin-test-junit")
     testImplementation("io.mockk:mockk:1.11.0")
 
