Check browserReleaseEsbuild on all platforms

--- a/.github/workflows/TEST.yml
+++ b/.github/workflows/TEST.yml
@@ -150,7 +150,6 @@ jobs:
       - { name: Testing NodeJS, run: ./gradlew jsNodeTest }
       - { name: Testing Browser, run: ./gradlew jsBrowserTest }
 
-
   test-android:
     needs: changes
     if: ${{ needs.changes.outputs.testAndroid == 'true' }}
@@ -212,6 +211,8 @@ jobs:
     - { name: e2e test native, working-directory: e2e-test, run: ./gradlew checkReferencesNative --stacktrace }
     - { name: Archive E2E Test Results, if: failure(), uses: actions/upload-artifact@v3, with: { name: e2e-test-results-linux, retention-days: 21, path: "**/e2e-test/build/screenshots", if-no-files-found: ignore } }
     - { name: Testing Linux Arm64 Publishing, run: ./gradlew publishLinuxArm64PublicationToMavenLocal }
+    - { name: Publish JS, run: ./gradlew publishJsPublicationToMavenLocal }
+    - { name: e2e test JS, working-directory: e2e-test, run: ./gradlew browserReleaseEsbuild --stacktrace }
 
   test-native-macos:
     needs: changes
@@ -234,6 +235,8 @@ jobs:
     - { name: e2e test, working-directory: e2e-test, run: ./gradlew checkReferencesNative --stacktrace }
     - { name: Archive E2E Test Results, if: failure(), uses: actions/upload-artifact@v3, with: { name: e2e-test-results-macos, retention-days: 21, path: "**/e2e-test/build/screenshots", if-no-files-found: ignore } }
     - { name: Publish Arm64, run: ./gradlew publishMacosArm64PublicationToMavenLocal }
+    - { name: Publish JS, run: ./gradlew publishJsPublicationToMavenLocal }
+    - { name: e2e test JS, working-directory: e2e-test, run: ./gradlew browserReleaseEsbuild --stacktrace }
 
   test-native-windows:
     needs: changes
@@ -258,3 +261,5 @@ jobs:
     - { name: Publish X64, shell: cmd, run: CALL gradlew.bat publishMingwX64PublicationToMavenLocal publishKotlinMultiplatformPublicationToMavenLocal }
     - { name: e2e test, shell: cmd, working-directory: e2e-test, run: CALL gradlew.bat checkReferencesNative --stacktrace }
     - { name: Archive E2E Test Results, if: failure(), uses: actions/upload-artifact@v3, with: { name: e2e-test-results-windows, retention-days: 21, path: "**/e2e-test/build/screenshots", if-no-files-found: ignore } }
+    - { name: Publish JS, run: ./gradlew publishJsPublicationToMavenLocal }
+    - { name: e2e test JS, working-directory: e2e-test, run: ./gradlew browserReleaseEsbuild --stacktrace }
